--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-you-might-not-need-an-effect": "^0.0.43",
     "globals": "^16.0.0",
     "prettier": "3.5.3",
     "typescript": "~5.8.3",
